--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,8 +28,11 @@ jobs:
           python-version: ${{matrix.python-version}}
 
       - name: Install dependencies
-        run: python -m pip install pytest .
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry  # Install Poetry if you're using it
+          poetry install  # Install dependencies from pyproject.toml
 
       - name: Run tests
-        run: pytest
+        run: pytest -v -n 1  # Run tests in a single thread with verbose output
 
