--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install pytest .
           pip install poetry  # Install Poetry if you're using it
           poetry install  # Install dependencies from pyproject.toml
 
